--- a/index.html
+++ b/index.html
@@ -236,9 +236,6 @@
         <section class="features">
           <div class="features__content">
             <span class="features__content-subtitle">Features</span>
-            <span class="features__content-subtitle features__content-subtitle--mobile"
-              >Acquire Customers</span
-            >
             <h2 class="features__content-title">Easily find leads and partners</h2>
             <p class="features__content-description">
               Send one-off and automated email, push, and in-app messages to people. Create better
@@ -280,6 +277,24 @@
           </figure>
         </section>
         <section class="engage">
+          <div class="engage__content">
+            <span class="engage__content-sub">Acquire Customers</span>
+            <h2 class="engage__content-title">Easily find leads and partners</h2>
+            <p class="engage__content-description">
+              Send one-off and automated email, push, and in-app messages to people. Create better
+              stories.
+            </p>
+            <figure class="engage__content-figure">
+              <img
+                class="engage__content-figure-image"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-asquire-customer.png"
+                alt="In Space"
+              />
+              <figcaption class="engage__content-figure-caption">
+                A better way to acquire new users
+              </figcaption>
+            </figure>
+          </div>
           <div class="engage__content">
             <span class="engage__content-sub">Engage Users</span>
             <h2 class="engage__content-title">Engage with your audience</h2>
