--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   </li>
                 </ul>
               </nav>
-              <button class="button-blue">
+              <button class="button-blue button-blue--hide">
                 Get Started
                 <span class="sr-only"> Get Started </span>
               </button>
