--- a/index.html
+++ b/index.html
@@ -417,63 +417,60 @@
           </div>
         </section>
         <section class="audience">
-          <div class="audience__inner">
-            <div class="audience__content">
-              <span class="audience__content-decor">Engage Visitors</span>
-              <h2 class="audience__content-title">Understand your audience</h2>
-              <p class="audience__content-description">
-                Early stage company? Eligible applicants get all of our products for just $49 a
-                month.
-              </p>
-              <div class="audience__content-buttons">
-                <button class="button-blue">Get Started</button>
-                <button class="button-white">Learn More</button>
-              </div>
+          <div class="audience__content">
+            <span class="audience__content-decor">Engage Visitors</span>
+            <h2 class="audience__content-title">Understand your audience</h2>
+            <p class="audience__content-description">
+              Early stage company? Eligible applicants get all of our products for just $49 a month.
+            </p>
+            <div class="audience__content-buttons">
+              <button class="button-blue">Get Started</button>
+              <button class="button-white">Learn More</button>
             </div>
-            <div class="audience__cards cards">
-              <ul class="cards__list">
-                <a class="cards__list-link" href="#">
-                  <li class="cards__list-item">
-                    <img
-                      class="cards__list-item-img"
-                      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
-                      alt="user-role"
-                    />
-                    <span class="cards__list-title">Developers</span>
-                  </li>
-                </a>
-                <a class="cards__list-link" href="#">
-                  <li class="cards__list-item">
-                    <img
-                      class="cards__list-item-img"
-                      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
-                      alt="user-role"
-                    />
-                    <span class="cards__list-title">Entertainment</span>
-                  </li>
-                </a>
-                <a class="cards__list-link" href="#">
-                  <li class="cards__list-item">
-                    <img
-                      class="cards__list-item-img"
-                      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
-                      alt="user-role"
-                    />
-                    <span class="cards__list-title">Athletes</span>
-                  </li>
-                </a>
-                <a class="cards__list-link" href="">
-                  <li class="cards__list-item">
-                    <img
-                      class="cards__list-item-img cards__list-item-img--size"
-                      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
-                      alt="user-role"
-                    />
-                    <span class="cards__list-title">Creators</span>
-                  </li>
-                </a>
-              </ul>
-            </div>
+          </div>
+          <div class="audience__cards cards">
+            <ul class="cards__list">
+              <a class="cards__list-link" href="#">
+                <li class="cards__list-item">
+                  <img
+                    class="cards__list-item-img"
+                    src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
+                    alt="user-role"
+                  />
+                  <span class="cards__list-title">Developers</span>
+                </li>
+              </a>
+              <a class="cards__list-link" href="#">
+                <li class="cards__list-item">
+                  <img
+                    class="cards__list-item-img"
+                    src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
+                    alt="user-role"
+                  />
+                  <span class="cards__list-title">Entertainment</span>
+                </li>
+              </a>
+              <a class="cards__list-link" href="#">
+                <li class="cards__list-item">
+                  <img
+                    class="cards__list-item-img"
+                    src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
+                    alt="user-role"
+                  />
+                  <span class="cards__list-title">Athletes</span>
+                </li>
+              </a>
+              <a class="cards__list-link" href="">
+                <li class="cards__list-item">
+                  <img
+                    class="cards__list-item-img cards__list-item-img--size"
+                    src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
+                    alt="user-role"
+                  />
+                  <span class="cards__list-title">Creators</span>
+                </li>
+              </a>
+            </ul>
           </div>
         </section>
         <section class="partners">
