--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="header__audio">
               <audio id="myAudio" src="./audio/muz.mp3" preload="auto" loop></audio>
               <div class="audio-player">
-                <button class="play-btn" id="playButton" onclick="togglePlay()">
+                <button class="play-btn" id="playButton" onclick="togglePlay()" title="Toggle Play">
                   <i class="fa fa-play pulsating-icon"></i>
                 </button>
               </div>
@@ -234,7 +234,7 @@
         <section class="features">
           <div class="features__content">
             <span class="features__content-subtitle">Features</span>
-            <h2 class="features__content-title">Easily find leads and partners</h2>
+            <h2 class="title features__content-title">Easily find leads and partners</h2>
             <p class="features__content-description">
               Send one-off and automated email, push, and in-app messages to people. Create better
               stories.
@@ -342,7 +342,7 @@
           <div class="manage__content">
             <div class="manage__content-inner">
               <span class="manage__content-inner-decor">Team Inbox</span>
-              <h2 class="manage__content-inner-title">Manage conversations</h2>
+              <h2 class="title manage__content-inner-title">Manage conversations</h2>
               <p class="manage__content-inner-description">
                 One place to manage and respond to all conversations with leads and users. Receive
                 messages from leads.
@@ -372,7 +372,7 @@
           <div class="communicate__content">
             <div class="communicate__content-wrap">
               <span class="communicate__content-decor">Communicate Better</span>
-              <h2 class="communicate__content-title">Built for busy small teams</h2>
+              <h2 class="title communicate__content-title">Built for busy small teams</h2>
               <p class="communicate__content-description">
                 Three products that can be used independently or combined together for your
                 company’s needs.
@@ -391,7 +391,7 @@
               </figcaption>
             </figure>
           </div>
-          <div class="communicate__content-divider communicate__content-divider--mobile"></div>
+          <div class="communicate__divider"></div>
           <div class="communicate__list">
             <div class="communicate__list-item">
               <p class="list-item__desc">
@@ -583,7 +583,7 @@
         </section>
         <section class="hiring">
           <div class="hiring__content">
-            <h2 class="hiring__content-title">We’re hiring</h2>
+            <h2 class="title hiring__content-title">We’re hiring</h2>
             <p class="hiring__content-description">
               We’re a team of lifelong learners. We’re equal parts left and right brained.
             </p>
@@ -761,7 +761,7 @@
           </ul>
         </div>
       </footer>
-      <button id="scrollToTopBtn" class="scroll-top-btn">
+      <button id="scrollToTopBtn" class="scroll-top-btn" title="Scroll to Top">
         <i class="fa fa-arrow-up"></i>
       </button>
     </div>
